--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -1,3 +1,19 @@
+/* Import the Open Sans font. */
+@import url('//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700&subset=latin,cyrillic-ext,latin-ext,greek-ext');
+/* Import the Font Awesome Icon Set */
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css');
+
+/* Override global values */
+body,
+textarea {
+    font-family: 'Open Sans Regular', 'Open Sans', Arial, sans-serif !important;
+}
+
+#innerdocbody {
+    font-size: 14px;
+    line-height: 18px;
+}
+
 /* Hide the notification that you need to install abiword (in the import/export dialog) */
 div#importmessageabiword {
     /* We need to add !important as etherpad uses an element style attribute to show the text */
@@ -99,4 +115,155 @@ div#importmessageabiword {
     margin-right: 5px;
     position: relative;
     top: 2px;
+}
+
+/* Hide chat */
+#chaticon {
+    display: none;
+}
+
+/* Restyle the toolbar */
+.toolbar {
+    background: transparent;
+    border: none;
+    height: 0;
+    opacity: 0;
+}
+
+.toolbar ul li {
+    margin-right: 12px;
+}
+
+.toolbar ul li:first-child {
+    margin-left: 16px;
+}
+
+.toolbar ul li a {
+    border-radius: 3px !important;
+    background: transparent;
+    border: none;
+}
+
+.toolbar ul li a:hover {
+    background: transparent;
+}
+
+.toolbar ul li a:active {
+    background: none;
+    -webkit-box-shadow: none;
+       -moz-box-shadow: none;
+            box-shadow: none;
+}
+
+.toolbar ul li a .buttonicon i {
+    color: #333;
+    font-size: 20px;
+}
+
+.toolbar ul li a:hover .buttonicon i {
+    color: #999;
+}
+
+#settings,
+#importexport,
+#embed,
+#connectivity,
+#users {
+    top: 49px;
+}
+
+.buttonicon-bold,
+.buttonicon-italic,
+.buttonicon-underline,
+.buttonicon-strikethrough,
+.buttonicon-insertorderedlist,
+.buttonicon-insertunorderedlist,
+.buttonicon-indent,
+.buttonicon-outdent,
+.buttonicon-showusers {
+    background-image: none;
+}
+
+/* Restyle the editor textarea */
+#editorcontainerbox {
+    border: 1px solid #CCC;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+            box-sizing: border-box;
+            top: 0;
+}
+
+#editorcontainerbox #editorcontainer {
+    top: 0;
+}
+
+#outerdocbody iframe {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+            box-sizing: border-box;
+    padding: 12px;
+}
+
+#innerdocbody {
+    min-height: 400px !important;
+}
+
+#innerdocbody > div {
+    margin-right: 20px !important;
+}
+
+/* Other users */
+
+#users {
+    background: #FFF;
+    -webkit-border-radius: 5px;
+       -moz-border-radius: 5px;
+            border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 10px #999;
+       -moz-box-shadow: 0px 0px 10px #999;
+            box-shadow: 0px 0px 10px #999;
+    padding: 12px;
+    top: 35px;
+}
+
+#users #myusernameedit {
+    font-size: 18px;
+    height: 24px;
+    margin-left: 2px;
+    width: 95%;
+}
+
+#users #myuser {
+    margin-bottom: 12px;
+    height: 32px;
+}
+
+#users #myswatchbox {
+    float: left;
+    left: 0;
+    position: relative;
+    top: 0;
+}
+
+#users #myswatchbox,
+#users #myswatch {
+    width: 30px;
+    height: 30px;
+}
+
+#users #otheruserstable td {
+    font-size: 14px;
+    padding: 0 2px 7px 0;
+}
+
+#users #otheruserstable tr:last-child td {
+    padding-bottom: 0;
+}
+
+#users #otheruserstable .swatch {
+    height: 25px;
+    margin: 0 4px 0 0;
+    width: 25px;
 }
