--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -65,11 +65,15 @@ textarea {
 }
 
 .toolbar ul li {
-    margin-right: 12px;
+    margin-right: 20px;
 }
 
 .toolbar ul li:first-child {
-    margin-left: 16px;
+    margin-left: 7px;
+}
+
+.toolbar ul li.separator {
+    display: none;
 }
 
 .toolbar ul li a {
@@ -96,7 +100,7 @@ textarea {
 
 .toolbar ul li a .buttonicon i {
     color: #333;
-    font-size: 20px;
+    font-size: 22px;
 }
 
 .toolbar ul li a:hover .buttonicon i {
@@ -123,6 +127,8 @@ textarea {
 .buttonicon-download,
 .buttonicon-showusers {
     background-image: none;
+    display: block;
+    height: 22px;
 }
 
 /* Restyle the editor textarea */
@@ -164,10 +170,12 @@ textarea {
        -moz-box-shadow: 0px 0px 10px #999;
             box-shadow: 0px 0px 10px #999;
     padding: 12px;
-    top: 35px;
+    right: 6px;
+    top: 40px;
 }
 
 #users #myusernameedit {
+    border: none !important;
     font-size: 18px;
     height: 31px;
     margin-left: 2px;
@@ -214,10 +222,10 @@ textarea {
     width: 25px;
 }
 
-/* Override the ep_font_size style */
-#font-size .size-selection {
+/* Override the ep_headings style */
+#headings #heading-selection {
     height: 23px;
-    margin-top: 5px;
+    margin-top: 4px;
     padding: 0 4px;
 }
 
@@ -225,7 +233,7 @@ textarea {
 #myuser #mycolorpicker {
     height: 275px;
     padding: 12px;
-    top: 14px;
+    top: 9px;
     width: 245px;
 }
 
