--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -48,7 +48,8 @@ textarea {
     display: inline-block;
     position: absolute;
     padding: 3px 4px;
-    top: 2px;
+    right: 1px;
+    top: 5px;
 }
 
 /* Hide chat */
@@ -64,16 +65,37 @@ textarea {
     opacity: 0;
 }
 
-.toolbar ul li {
-    margin-right: 20px;
+.toolbar ul.menu_left {
+    margin-right: 50px;
 }
 
-.toolbar ul li:first-child {
-    margin-left: 7px;
+.toolbar ul.menu_right {
+    position: absolute;
+    right: 0;
+}
+
+.toolbar ul li {
+    height: 40px;
 }
 
 .toolbar ul li.separator {
     display: none;
+}
+
+.toolbar ul li .grouped-left,
+.toolbar ul li .grouped-middle,
+.toolbar ul li .grouped-right {
+    margin: 0 !important;
+}
+
+.toolbar ul li > a,
+.toolbar ul li > label a {
+    height: inherit;
+    padding: 10px 14px !important;
+}
+
+.toolbar ul li > select {
+    margin: 0 14px;
 }
 
 .toolbar ul li a {
@@ -107,25 +129,7 @@ textarea {
     color: #999;
 }
 
-#settings,
-#importexport,
-#embed,
-#connectivity,
-#users {
-    top: 49px;
-}
-
-.buttonicon-bold,
-.buttonicon-italic,
-.buttonicon-underline,
-.buttonicon-strikethrough,
-.buttonicon-insertorderedlist,
-.buttonicon-insertunorderedlist,
-.buttonicon-indent,
-.buttonicon-outdent,
-.buttonicon-adjust,
-.buttonicon-download,
-.buttonicon-showusers {
+.buttonicon {
     background-image: none;
     display: block;
     height: 22px;
@@ -171,7 +175,7 @@ textarea {
             box-shadow: 0px 0px 10px #999;
     padding: 12px;
     right: 6px;
-    top: 40px;
+    top: 45px;
 }
 
 #users #myusernameedit {
@@ -224,8 +228,8 @@ textarea {
 
 /* Override the ep_headings style */
 #headings #heading-selection {
-    height: 23px;
-    margin-top: 4px;
+    height: 25px;
+    margin-top: 9px;
     padding: 0 4px;
 }
 
@@ -233,11 +237,9 @@ textarea {
 #myuser #mycolorpicker {
     height: 275px;
     padding: 12px;
-    top: 9px;
+    top: 10px;
     width: 245px;
 }
-
-
 
 @media (max-width: 420px) {
     .toolbar {
