Removing the localization keys from the titles as this causes warnings to be logged

--- a/static/templates/editbarButtons.ejs
+++ b/static/templates/editbarButtons.ejs
@@ -1,14 +1,14 @@
 <li class="separator acl-write"></li>
 <li id="headings" class="acl-write">
     <select id="heading-selection">
-        <option value="dummy" selected data-l10n-id="ep_headings.style">Style</option>
-        <option value="-1" data-l10n-id="ep_headings.normal">Normal</option>
-        <option value="0" data-l10n-id="ep_headings.header1">Title 1</option>
-        <option value="1" data-l10n-id="ep_headings.header2">Title 2</option>
-        <option value="2" data-l10n-id="ep_headings.header3">Title 3</option>
-        <option value="3" data-l10n-id="ep_headings.header4">Title 4</option>
-        <option value="4" data-l10n-id="ep_headings.header5">Title 5</option>
-        <option value="5" data-l10n-id="ep_headings.header6">Title 6</option>
-        <option value="6" data-l10n-id="ep_headings.code">Code</option>
+        <option value="dummy" selected>Style</option>
+        <option value="-1">Normal</option>
+        <option value="0">Title 1</option>
+        <option value="1">Title 2</option>
+        <option value="2">Title 3</option>
+        <option value="3">Title 4</option>
+        <option value="4">Title 5</option>
+        <option value="5">Title 6</option>
+        <option value="6">Code</option>
     </select>
 </li>
