Skin adjustments for 1.5.2

--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -182,7 +182,7 @@ li[data-key=showusers] > a #online_count {
 #editorcontainerbox #editorcontainer {
     overflow: auto;
     -webkit-overflow-scrolling: touch;
-    top: 0;
+    top: 0 !important;
 }
 
 #outerdocbody iframe {
