--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -58,9 +58,9 @@ textarea {
 /* Position the online count button a bit better */
 li[data-key=showusers] > a #online_count {
     background-color: #000;
-    -webkit-border-radius: 4px !important;
-       -moz-border-radius: 4px !important;
-            border-radius: 4px !important;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
     color: #FFF;
     display: inline-block;
     position: absolute;
