(issue #14) reposition users and count icons

--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -55,7 +55,13 @@ textarea {
     min-width: 250px;
 }
 
-/* Position the online count button a bit better */
+/* Position the users button and online count a bit better */
+.toolbar ul li a .buttonicon {
+    display: inline-block !important;
+    left: 3px;
+    position: relative;
+}
+
 li[data-key=showusers] > a #online_count {
     background-color: #000;
     -webkit-border-radius: 4px;
@@ -63,10 +69,10 @@ li[data-key=showusers] > a #online_count {
             border-radius: 4px;
     color: #FFF;
     display: inline-block;
-    position: absolute;
+    font-weight: 700;
     padding: 3px 4px;
-    right: 1px;
-    top: 5px;
+    position: relative;
+    top: -6px;
 }
 
 li[data-key=showusers] > a:focus #online_count,
