(issue #13) match focus styles

--- a/static/css/pad.css
+++ b/static/css/pad.css
@@ -73,6 +73,10 @@ li[data-key=showusers] > a #online_count {
     display: none;
 }
 
+.buttonicon:focus {
+    border: none !important;
+}
+
 /* Restyle the toolbar */
 .toolbar {
     background: transparent;
@@ -144,18 +148,16 @@ li[data-key=showusers] > a #online_count {
     width: 25px;
 }
 
-.toolbar ul li a:hover .buttonicon {
+.toolbar ul li a:hover .buttonicon,
+.toolbar ul li a .buttonicon:focus {
     color: #999;
 }
 
-.toolbar ul li a .buttonicon:focus {
-    border: 0;
-}
-
+.toolbar ul li a .buttonicon:focus,
 .toolbar ul li select:focus {
-    outline-color: initial;
-    outline-style: auto;
-    outline-width: initial;
+    outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
 }
 
 /* Additional icons added by OAE */
